Fixed some things.

--- a/edualitytest/src/main/resources/templates/content/home.html
+++ b/edualitytest/src/main/resources/templates/content/home.html
@@ -1,16 +1,24 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <style>
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600");
 </style>
 
 	<head>
+    
+   
+         
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<!--   <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css}"> -->
+  <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{css/bootstrap.css}"/> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
+    
+    
+   
 </head>
 		<title>EDUALITY</title>
 		<meta charset="utf-8" />
